skel.local/のhtmlを資源管理から除外

--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,6 @@ __cache/
 data/textparser_plugin_cache.dat
 data/system_config.dat
 data/default_setting.dat
+skel.local/*.html
 adiary.conf.cgi
 adiary.env.cgi
